Fixed sidebar fixed position Dark mode color text Fixed media padding

--- a/resources/sass/_dark-theme.scss
+++ b/resources/sass/_dark-theme.scss
@@ -23,3 +23,18 @@
     color: #b4d9ca !important;
 }
 
+[data-theme="dark"] small, p, h5 {
+    color: white !important;
+}
+
+[data-theme="dark"] h5 {
+    color: white !important;
+}
+
+[data-theme="dark"] a {
+    color: white !important;
+}
+[data-theme="dark"] button {
+    color: white !important;
+}
+
