--- a/resources/sass/_sidebar.scss
+++ b/resources/sass/_sidebar.scss
@@ -85,30 +85,3 @@
     margin-left: 190px;
 }
 
-@media (max-width: 768px) {
-    .sidebar {
-        left: -100%;
-        background: rgba(84, 152, 125, 0.9);
-    }
-    .app-content {
-        margin-left: 0 !important;
-    }
-
-    body{
-        margin: 0;
-        padding: 0;
-    }
-
-
-    nav {
-        background: rgba(84, 152, 125, 0.9) !important;
-
-        a, div {
-            color: white !important;
-        }
-    }
-
-    #sidebar-check:checked ~ .sidebar {
-        width: 100% !important;
-    }
-}
