--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -21,16 +21,11 @@ body {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
-    transition: all 0.5s ease
+    transition: all 0.5s ease;
 }
 
 a {
     transition: all 1s ease;
-}
-
-[data-theme="dark"] {
-    background: rgba(24, 24, 24, 1) !important;
-    color: white;
 }
 
 .active-link {
@@ -63,5 +58,33 @@ a {
 .dropdown-item:hover {
     color: white !important;
     background-color: rgba(40, 86, 61, 0.34) !important;
+}
+
+@media (max-width: 768px) {
+    .sidebar {
+        left: -100%;
+        background: rgba(84, 152, 125, 0.9);
+    }
+    .app-content {
+        margin-left: 0 !important;
+    }
+
+    body{
+        margin: 0;
+        padding: .5em;
+    }
+
+
+    nav {
+        background: rgba(84, 152, 125, 0.9) !important;
+
+        a, div {
+            color: white !important;
+        }
+    }
+
+    #sidebar-check:checked ~ .sidebar {
+        width: 100% !important;
+    }
 }
 
